--- a/sub_script.conf
+++ b/sub_script.conf
@@ -7,5 +7,19 @@ hostname =  trade-acs.m.taobao.com, api.m.jd.com
 ^http://amdc\.m\.taobao\.com/amdc/mobileDispatch url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
 ^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
  
+# 抖音去广告去水印 (By Choler)
+^https://.*\.amemv\.com/aweme/v2/feed/ url request-header ^GET /aweme/v2/feed/(.+) request-header GET /aweme/v1/feed/$1
+^https:\/\/.*\.amemv\.com\/aweme\/v.*\/(feed|post) url script-response-body https://raw.githubusercontent.com/Choler/Surge/master/Script/Aweme.js
 
+# YouTube去广告
+^https?:\/\/.+\.googlevideo\.com\/.+&oad url reject-img
+^https?:\/\/.+\.googlevideo\.com\/.+ctier url reject-img
+^https?:\/\/youtubei\.googleapis\.com\/youtubei\/.+ad_ url reject-img
+^https?:\/\/youtubei\.googleapis\.com\/youtubei\/.+log_ url reject-img
+^https?:\/\/.+\.youtube\.com\/get_midroll_ url reject-img
+^https?:\/\/premiumyva\.appspot\.com\/vmclickstoadvertisersite url reject-img
+^https?:\/\/.+\.youtube\.com\/api\/stats\/ads url reject-img
+^https?:\/\/.+\.youtube\.com\/api\/stats\/.+adformat url reject-img
+^https?:\/\/.+\.youtube\.com\/pagead\/ url reject-img
+^https?:\/\/.+\.youtube\.com\/ptracking url reject-img
 
