--- a/sub_script.conf
+++ b/sub_script.conf
@@ -1,4 +1,4 @@
-hostname =  trade-acs.m.taobao.com, api.m.jd.com
+hostname =  trade-acs.m.taobao.com, api.m.jd.com, api.bilibili.com
 
 # jd
 ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
@@ -6,3 +6,7 @@ hostname =  trade-acs.m.taobao.com, api.m.jd.com
 # tb
 ^http://amdc\.m\.taobao\.com/amdc/mobileDispatch url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
 ^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
+
+#哔哩哔哩大会员
+https:\/\/api\.bilibili\.com\/pgc\/player\/api\/playurl url 302 http://api.bili.best/playurl
+https:\/\/api.bilibili.com\/pgc\/view\/app\/season url 302 http://api.bili.best/season
