--- a/sub_script.conf
+++ b/sub_script.conf
@@ -1,4 +1,4 @@
-hostname =  trade-acs.m.taobao.com, api.m.jd.com, api.bilibili.com
+hostname =  trade-acs.m.taobao.com, api.m.jd.com, api.bilibili.com, ios.prod.ftl.netflix.com,
 
 # jd
 ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
