--- a/sub_script.conf
+++ b/sub_script.conf
@@ -1,4 +1,4 @@
-hostname =  trade-acs.m.taobao.com, api.m.jd.com, api.bilibili.com, ios.prod.ftl.netflix.com,
+hostname =  trade-acs.m.taobao.com, api.m.jd.com, api.bilibili.com, ios.prod.ftl.netflix.com, api*.amemv.com, aweme*.snssdk.com,
 
 # 京东历史价格
 ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
@@ -10,3 +10,6 @@ hostname =  trade-acs.m.taobao.com, api.m.jd.com, api.bilibili.com, ios.prod.ftl
 # Netflix评分
 ^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-response-header https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js
 ^https?://ios\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js
+
+# 抖音去广告去水印 (By Choler)
+^https://aweme-eagle(.*)\.snssdk\.com\/aweme/.+/(feed|aweme/post|follow/feed)/ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Aweme.js
